# wspb

./: .gitignore  HW1.ipynb  HW2_wip.ipynb  pyproject.toml  readme.md  setup.py
buildings_pipeline/: __init__.py  definitions.py
buildings_pipeline/assets/: citywalls_data.py  combined_data.py  spb_open_data.py
buildings_pipeline/resources/: db.py  io_managers.py  logging.py  resources.py
data/checkpoints/: citywalls_checkpoint.txt
